--- a/styler.css
+++ b/styler.css
@@ -135,6 +135,7 @@ p>a{
 }
     #thanks {
          /* Initially hide the container */
+        display: grid;
         text-align:center; /* Center align text */
         padding: 20px; /* Add padding */
         border: 5px ;
